# fdgw2

./: LICENSE  Makefile  README  README.md  bootstrap.sh  log.build  log.image  log.img
conf/: dot.profile  mtree.conf
conf/etc/: dhcpd.conf  hosts  ifconfig.wm0  lkm.conf  mygate  pf.conf  pf.os  rc.router  rc.subr  resolv.conf  services  sysctl.conf
conf/etc/defaults/: pf.boot.conf  rc.conf
conf/kernel.RPI/: FDGW
conf/kernel.i386/: FDGW  FDGW2  Makefile  config.disable  config.enable  convert.pl
mdec/i386/: boot  bootxx_ffsv1
model/natbox/: list  ramdiskbin.conf  rc.conf
model/rescue/: list  ramdiskbin.conf
model/standard/: list  ramdiskbin.conf
src/: 00_README.jp  Makefile  Makefile.bootfloppy  Makefile.bootfloppy.org  Makefile.kernel  Makefile.ramdisk  Makefile.ramdisk.org  distinfo  list2sh.awk  merge_conf.awk  runlist.sh
src/cat/: .depend  cat.c  cat.d  cat.ro
src/etc/: fstab  ifconfig.xxx0  ipnat.conf  rc.conf  rc.router  syslog.conf
src/etc/defaults/: rc.conf
src/etc/jftpgw/: jftpgw.conf
src/etc/squid/: clean.sh  convert.pl  master.sh  shrink.sh  squid.conf  squid.conf.example
src/etc/zebra/: bgpd.conf
src/gnu/rp-pppoe/: README  go  rp-pppoe.spec
src/gnu/rp-pppoe/configs/: firewall-masq  firewall-standalone  pppoe.conf
src/gnu/rp-pppoe/doc/: CHANGES  HOW-TO-CONNECT  KERNEL-MODE-PPPOE
src/gnu/rp-pppoe/man/: adsl-connect.8  adsl-setup.8  adsl-start.8  adsl-status.8  adsl-stop.8  pppoe-relay.8  pppoe-server.8  pppoe-sniff.8  pppoe.8  pppoe.conf.5
src/gnu/rp-pppoe/scripts/: adsl-connect.in  adsl-init-turbolinux.in  adsl-init.in  adsl-setup.in  adsl-start.in  adsl-status  adsl-stop.in
src/gnu/rp-pppoe/src/: Makefile.in  common.c  config.h.in  configure  configure.in  debug.c  discovery.c  if.c  plugin.c  ppp.c  pppoe-server.c  pppoe-sniff.c  pppoe.c  pppoe.h  relay.c  relay.h
src/gnu/stone/: GPL.txt  Makefile  README.en.txt  README.txt  patch-2.1d  stone.1  stone.1.ja  stone.c
src/lib/libtransparent/: Makefile  TODO  ipfilter.c  ipfilter.h
src/ls/: .depend  Makefile  ls.c  ls.d  ls.ro
src/patches/racoon/: patch-aa  patch-ab  patch-ac  patch-ad  patch-ae  patch-af  patch-ag
src/pds/ttcp/: 00_README  Makefile  ttcp.c  ttcp.c-brl  ttcp.cat1
src/pwd/: .depend  pwd.d  pwd.ro
src/sbin/transproxy/: CHANGELOG  COPYRIGHT  Makefile  README  TODO  acl.c  acl.h  tproxy.8  tproxy.c  tproxyrun  tproxywatch
src/usr.sbin/edomae/: README  uni.sh
src/usr.sbin/pim6sd/: Makefile.inc
src/usr.sbin/pim6sd/pim6sd/: Makefile  cftoken.l  pim6sd.cat8  pim6sd.conf.cat5
src/utils/: extract.sh  fetch.sh  fix_ramdiskbin.conf.sh  make_tree.sh  mktooldir.sh  prepare_workdir.sh  stat.sh
src/utils/brflap/: brflap.sh
src/utils/gentraffic/: gentraffic.sh
src/utils/resolver/: Makefile  __h_errno_set.c
src/utils/x_grep/: grep.sh
